<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_brown"
    tools:context=".Staff_App.Activities.CreateStaffActivity">

    <TextView
        android:id="@+id/createStaffTitle"
        android:layout_width="358dp"
        android:layout_height="63dp"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:gravity="center_horizontal"
        android:text="@string/create_staff_user"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="351dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208">

        <TextView
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:paddingBottom="10dp"
            android:text="@string/staff_level"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="424dp" />

        <EditText
            android:id="@+id/editStaffLevel"
            android:layout_width="381dp"
            android:layout_height="48dp"
            android:background="@drawable/input_field"
            android:drawablePadding="5dp"
            android:hint="@string/staff_level"
            android:inputType="number"
            android:textColor="@color/colorAccentDark"
            android:textSize="24sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/first_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="424dp" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="381dp"
            android:layout_height="48dp"
            android:background="@drawable/input_field"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="5dp"
            android:hint="@string/first_name"
            android:textSize="24sp"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/last_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="424dp" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="377dp"
            android:layout_height="48dp"
            android:background="@drawable/input_field"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="5dp"
            android:hint="@string/last_name"
            android:textSize="24sp"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonReturn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="74dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1108dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:lineSpacingExtra="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="171dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="588dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>