<resources>
    <string name="app_name">Beverage Booker Staff</string>
    <string name="id">ID</string>
    <string name="size">Size</string>>
    <string name="qty">Qty</string>
    <string name="options">Options</string>
    <string name="comment">Comment</string>
    <string name="inventory">INVENTORY</string>
    <string name="update">Update</string>
    <string name="stock">Stock</string>
    <string name="name">Name</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="desc">Desc</string>
    <string name="price">Price</string>
    <string name="add_item">Add item</string>
    <string name="menu">MENU</string>
    <string name="select_new_item_type">Select New Item Type</string>
    <string name="drink">Drink</string>
    <string name="food">Food</string>
    <string name="item_title">Item Title:</string>
    <string name="time_minutes">time (Minutes)</string>
    <string name="shortdesc_optional">shortDesc (Optional)    </string>
    <string name="short_description">Short Description:</string>
    <string name="item_price">Item Price:</string>
    <string name="preparation_time">Preparation Time:</string>
    <string name="create_staff_user">Create Staff User</string>
    <string name="enter_your_staff_id">Enter Staff ID</string>
    <string name="click_to_view_orders">Click to View Orders</string>
    <string name="complete_order">Complete Order</string>
    <string name="order_number">Order Number</string>
    <string name="textview">TextView</string>
    <string name="first_name">First name</string>
    <string name="return_to_manager_page">Return to Manager Page</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="staff_level">Staff level</string>
    <string name="delivered">Delivered</string>
    <string name="mobile">Mobile</string>
    <string name="unit">Unit</string>
    <string name="street_name">Street Name</string>
    <string name="item_size">item size</string>
    <string name="logo">logo</string>
    <string name="continueIn">continue</string>
    <string name="orders">Orders</string>
    <string name="deliveries">Deliveries</string>
    <string name="manage_staff">Manage Staff</string>
    <string name="allow_beverage_options">Allow Beverage Options:</string>
    <string name="title">title</string>
    <string name="heated_allows_for_item_to_be_heated">heated: Allows for item to be heated</string>
    <string name="frappe_turns_beverage_into_a_frappe">frappe: Turns beverage into a frappe</string>
    <string name="extras_vanilla_caramel_chocolate_cream">extras: Vanilla, Caramel, Chocolate, Cream</string>
    <string name="decaf_decaffeinates_beverage">decaf: Decaffeinates Beverage</string>
    <string name="sugar_sugar_sweetener">sugar: Sugar, Sweetener</string>
    <string name="milk_full_cream_skim_almond_soy">milk: Full Cream, Skim, Almond, Soy</string>
    <string name="add">Add</string>
    <string name="order_id">Order ID</string>
    <string name="order">Order #</string>
    <string name="orderstatus">orderstatus</string>
    <string name="deliver_order">Deliver Order</string>

</resources>
