...
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        app:layout_behavior="#string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addStaffButton"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addStaffButton"
        style="@style/Widget.AppCompat.Button.Borderless"
...
