...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSelectTitle" />

    <Button
        android:id="@+id/drinkMenuButton"
        android:layout_width="253dp"
        android:layout_height="110dp"
        android:layout_below="@id/foodMenuButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/button"
...
