...
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert" />

    <Button
        android:id="@+id/addMenuItem"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:text="@string/add_item"
...
